# pipe_inspection_mission

./: README.md
imc_ros_msgs/: package.xml
imc_ros_msgs/msg/: FollowRefState.msg  Goto.msg  Reference.msg
imcpy_ros_bridge/: package.xml
imcpy_ros_bridge/imc_ros_msgs/: CMakeLists.txt
imcpy_ros_bridge/imc_ros_msgs/action/: FollowSingleReference.action
imcpy_ros_bridge/imc_ros_msgs/msg/: FollowReference.msg
imcpy_ros_bridge/imcpy_ros_bridge/: follow_single_reference_client.py  follow_single_reference_server.py  ros2imc.py  setup.cfg  setup.py
imcpy_ros_bridge/imcpy_ros_bridge/imcpy_ros_bridge/: follow_reference_example.py  imc2ros.py
imcpy_ros_bridge/imcpy_ros_bridge/launch/: lauv_simulator_1.launch.py
imcpy_ros_bridge/imcpy_trees/: package.xml  setup.cfg
imcpy_ros_bridge/imcpy_trees/imcpy_trees/: square_tree.py
imcpy_ros_bridge/imcpy_trees/imcpy_trees/behaviours/: __init__.py
imcpy_ros_bridge/imcpy_trees/imcpy_trees/tree_actions/: actions.py  imcpy_single_ref.py
imcpy_ros_bridge/imcpy_trees/launch/: follow_single_reference_launch.py  square_trajectory_launch.py
imcpy_trees/: setup.py
imcpy_trees/imcpy_trees/: __init__.py  follow_single_reference_tree.py  square_server_tree.py
imcpy_trees/imcpy_trees/behaviours/: follow_one_reference.py
imcpy_trees/imcpy_trees/tree_actions/: __init__.py  follow_single_reference.py
imcpy_trees/launch/: square_server_trajectory_launch.py
neptusROV/neptus_interface/: CMakeLists.txt  package.xml
neptusROV/neptus_interface/launch/: lauv_simulator_1.launch.py
remaro_uw_sim/neptusROV/: README.md
remaro_uw_sim/neptusROV/neptus_interface/src/: neptus_pose_to_unavsim_pose.cpp
remaro_uw_sim/unavsim_interfaces/: package.xml
remaro_uw_sim/unavsim_ros_pkgs/: README.md  setup.py
remaro_uw_sim/unavsim_ros_pkgs/config/: recorder_config.json  settings.json
remaro_uw_sim/unavsim_ros_pkgs/include/: airsim_ros_wrapper.h
remaro_uw_sim/unavsim_ros_pkgs/launch/: position_controller_simple.launch.py  rviz.launch.py
remaro_uw_sim/unavsim_ros_pkgs/scripts/: car_joy  helpers.py
remaro_uw_sim/unavsim_ros_pkgs/src/: pd_position_controller_simple.cpp
unavsim_interfaces/: CMakeLists.txt
unavsim_interfaces/msg/: VelCmdGroup.msg
unavsim_ros_pkgs/: CMakeLists.txt  package.xml
unavsim_ros_pkgs/include/: pd_position_controller_simple.h
unavsim_ros_pkgs/launch/: airsim_with_simple_PD_position_controller.launch.py  unavsim_node.launch.py
unavsim_ros_pkgs/scripts/: mimir_recorder.py
unavsim_ros_pkgs/src/: airsim_ros_wrapper.cpp  unavsim_node.cpp
