<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imc_ros_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nbore@kth.se">Nils Bore</maintainer>
  <maintainer email="olaya@ece.au.dk">olaya alvarez tunon</maintainer>
  <license>BSD</license>
  <license>TODO: License declaration</license>

  <author email="nbore@kth.se">Nils Bore</author>
  <author email="ozero@kth.se">Ozer Ozkahraman</author>
  <author email="olaya@ece.au.dk">olaya alvarez tunon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <buildtool_depend>message_runtime</buildtool_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
